Added test citation w/zotero

--- a/references.bib
+++ b/references.bib
@@ -61,3 +61,17 @@
 	year = {1978},
 	date = {1978}
 }
+
+@article{rankin2005,
+	title = {Source of the North Pacific {"}boing{"} sound attributed to minke whales},
+	author = {Rankin, Shannon and Barlow, Jay},
+	year = {2005},
+	month = {10},
+	date = {2005-10-28},
+	journal = {The Journal of the Acoustical Society of America},
+	pages = {3346--3351},
+	volume = {118},
+	number = {5},
+	doi = {https://doi.org/10.1121/1.2046747},
+	langid = {English}
+}
