--- a/Minke-Whale-Report.tex
+++ b/Minke-Whale-Report.tex
@@ -296,7 +296,7 @@ DEPARTMENT OF COMMERCE\\
 \strut \\
 National Oceanic and Atmospheric Administration\\
 National Marine Fisheries Service\\
-Northwest Fisheries Science Center}}};
+Southwest Fisheries Science Center}}};
 }
 \end{scope}
 
@@ -470,7 +470,7 @@ Division,  8901 La Jolla Shores DriveLa Jolla, California 92037
 \setcounter{page}{1}
 \end{frontmatter}
 
-%%%%% end titlepage extension code\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[sharp corners, boxrule=0pt, interior hidden, frame hidden, borderline west={3pt}{0pt}{shadecolor}, enhanced, breakable]}{\end{tcolorbox}}\fi
+%%%%% end titlepage extension code\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, interior hidden, breakable, frame hidden, boxrule=0pt, sharp corners, enhanced]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
