--- a/text/Chapter1.qmd
+++ b/text/Chapter1.qmd
@@ -15,7 +15,9 @@ data_id <- "CRchum"
 
 # Minke Whales
 
-Test citation on minke whale boings. @rankin2005 discovered the boing sound found in the North Pacific Ocean was being made by a minke whale, *Balaenoptera acutorostrata.*
+Test citation, information about minke whale boings [@rankin2005].
+
+@rankin2005 discovered the boing sound found in the North Pacific Ocean was being made by a minke whale, *Balaenoptera acutorostrata.*
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. @clark1993 vitae ante quis dui egestas fringilla ac vitae justo [@ansley1981; @collins1996; @deuel1968] . Pellentesque quis magna vel odio malesuada rutrum a volutpat nisl. Aliquam fermentum, urna eget tristique mattis, augue augue tristique ipsum, eget finibus nunc eros non nisi. Phasellus mattis hendrerit sapien, quis accumsan dui pretium eget. Nunc eleifend laoreet urna a luctus. Nulla vel sapien in nulla gravida tempus sit amet a metus. Vivamus porta condimentum tempus. Maecenas rhoncus elit id ultricies scelerisque. In gravida urna in ligula fringilla euismod. Curabitur efficitur porta libero ac fermentum. Cras fringilla et libero at posuere. Curabitur sodales dapibus elit a convallis.
 
