--- a/Minke-Whale-Report.tex
+++ b/Minke-Whale-Report.tex
@@ -470,7 +470,7 @@ Division,  8901 La Jolla Shores DriveLa Jolla, California 92037
 \setcounter{page}{1}
 \end{frontmatter}
 
-%%%%% end titlepage extension code\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, interior hidden, breakable, frame hidden, boxrule=0pt, sharp corners, enhanced]}{\end{tcolorbox}}\fi
+%%%%% end titlepage extension code\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, frame hidden, sharp corners, borderline west={3pt}{0pt}{shadecolor}, enhanced, breakable, boxrule=0pt]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -493,8 +493,15 @@ Center.
 
 \bookmarksetup{startatroot}
 
-\hypertarget{a-chapter---minke-whales}{%
-\chapter{A chapter - Minke Whales}\label{a-chapter---minke-whales}}
+\hypertarget{minke-whale-introduction}{%
+\chapter{Minke Whale Introduction}\label{minke-whale-introduction}}
+
+Test citation, information about minke whale boings (Rankin and Barlow
+2005).
+
+Rankin and Barlow (2005) discovered the boing sound found in the North
+Pacific Ocean was being made by a minke whale, \emph{Balaenoptera
+acutorostrata.}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Clark (1993)
 vitae ante quis dui egestas fringilla ac vitae justo (Ansley and Davis
@@ -517,8 +524,8 @@ nisi mi, quis mollis velit ullamcorper non. Aliquam tempus fringilla
 bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
 viverra nulla elementum libero mollis, quis cursus velit sagittis.
 
-\hypertarget{general-location}{%
-\section{General location}\label{general-location}}
+\hypertarget{general-locations}{%
+\section{General locations}\label{general-locations}}
 
 Morbi iaculis eget augue eget facilisis. Etiam non orci dignissim,
 efficitur purus viverra, pellentesque neque. Aliquam ornare, magna ut
@@ -711,6 +718,12 @@ Survey.''}
 \leavevmode\vadjust pre{\hypertarget{ref-hardy1978}{}}%
 Hardy, J. D., Jr. 1978. {``Development of Fishes of the Mid-Atlantic
 Bight. Vol. III. Aphredoderidae Through Rachycentridae.''}
+
+\leavevmode\vadjust pre{\hypertarget{ref-rankin2005}{}}%
+Rankin, Shannon, and Jay Barlow. 2005. {``Source of the North Pacific
+{"}Boing{"} Sound Attributed to Minke Whales.''} \emph{The Journal of
+the Acoustical Society of America} 118 (5): 3346--51.
+https://doi.org/\url{https://doi.org/10.1121/1.2046747}.
 
 \end{CSLReferences}
 
