Edited chapter 1 qmd

--- a/references.bib
+++ b/references.bib
@@ -75,3 +75,16 @@
 	doi = {https://doi.org/10.1121/1.2046747},
 	langid = {English}
 }
+
+@techreport{nosal2011,
+	title = {Passive Acoustic Tracking of Minke Whales:},
+	author = {Nosal, Eva-Marie},
+	year = {2011},
+	month = {01},
+	date = {2011-01-03},
+	doi = {10.21236/ADA535209},
+	url = {http://www.dtic.mil/docs/citations/ADA535209},
+	note = {DOI: 10.21236/ADA535209},
+	address = {Fort Belvoir, VA},
+	langid = {en}
+}
